[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "keyedstablehash"
version = "0.0.1"
description = "Stable, keyed hashing for Python objects and columnar data (SipHash-like PRF semantics)."
readme = "Readme.md"
requires-python = ">=3.9"
authors = [{ name = "Your Name", email = "you@example.com" }]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = []

[project.optional-dependencies]
dataframes = ["pandas>=1.5"]
arrow = ["pyarrow>=12.0.0"]
polars = ["polars>=0.20.0"]
dev = ["pytest>=7.0", "pytest-cov"]

[project.urls]
Homepage = "https://example.com/keyedstablehash"
Repository = "https://example.com/keyedstablehash"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"keyedstablehash" = ["py.typed"]
